--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /usr/src/app
 
 # pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
 COPY go.mod go.sum ./
+
 RUN go mod download && go mod verify
+RUN go get github.com/joho/godotenv
 
 COPY . .
 RUN go build -v -o /usr/local/bin/app ./...
